Updated layout of homepage, portfolio, and about. Fixed some issues and changed how some features work i.e adding react-gif-player library to stop flickering

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -22,12 +22,17 @@ body{
   justify-content: center;
   align-items: center;
   text-align:center;
+  margin-bottom: 35vh;
+  width:90vw;
+  background-color: var(--mainBG);
+  margin-left: auto;
+  margin-right: auto;
 }
 .outerRepoDiv h1{
   color: var(--titleCol);
   font-family: 'Geologica', sans-serif;
   font-weight: 650;
-  font-variation-settings:  'SHRP' 100; 
+  font-variation-settings:  'SHRP' 100;
   text-shadow: 2px 1px 3px var(--accentCol);
 }
 .updatedRepo{
@@ -47,11 +52,11 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: 'Poppins', sans-serif;
   font-size: 1.6vmin;
   color: var(--infoCol);
-  width: 80vw;
-  align-self: center;
+  width: 95vw; 
 }
 .details{
   text-align: left;
@@ -61,6 +66,7 @@ body{
   font-weight: 750;
   font-size: 3vmin;
   color: var(--titleCol);
+  margin-top: 5px;
 }
 .repoLink{
   text-decoration: none;
